# Rotating-shield-particle-filter

./: .gitattributes  .gitignore  AGENTS.md  MIXED_BASELINE_COMMIT  README.md  baseline_pf.py  chapter2.md  chapter3.md  environment.py  main.py  pyproject.toml  thesis.md
docs/: compute_parallelism_policy.md  external_relocation_boundary.md  hybrid_planning_boundary.md  mixed_pf_mle_baseline.md  online_pf_improvement_notes.md  pf_purity_audit.md  pure_pf_architecture.md  ral_experiment_figure_policy.md  ral_figure_quality_policy.md  ral_manuscript_policy.md  ral_minimal_ablation_plan.md  ral_prior_figure_notes.md  shield_strength_systematics.md  simulation_fidelity_policy.md
obstacle_layouts/: Ex1_obstacles.json  Ex2_obstacles.json  Ex3_obstacles.jso  Ex3_obstacles.json  Ex4_obstacles.json  Ex5_obstacles.json  Ex6_obstacles.json  demo_obstacles.json  no_obstacles.json  obstacles_1.json  obstacles_2.json  obstacles_3.json
results/: full_pf_geant4_full_transport_runtime_20260507.json  geant4_net_response_validation.csv  geant4_net_response_validation.json  result_summary.json  result_summary_case01_multi_isotope_baseline_passive_no_shield_seed_2026050901.json  result_summary_case01_multi_isotope_baseline_passive_no_shield_single_view_seed_2026050901.json  result_summary_case01_multi_isotope_one_step_path_seed_2026050901.json  result_summary_case01_multi_isotope_proposed_seed_2026050901.json  result_summary_case01_multi_isotope_round_robin_shield_seed_2026050901.json  result_summary_case02_phasefix_20260512.json  result_summary_obstacle_full_verify.json  (+44 more)
(+1137 files in other folders)
